fix: align btn text coloring(hover/active)

--- a/frontend/src/assets/style/_variables.scss
+++ b/frontend/src/assets/style/_variables.scss
@@ -17,6 +17,7 @@
   /*other basic stuff*/
   --accent-color: #cacaca;
   --text-primary-color: #222;
+  --text-color-hover: #ffffff;
   --element-size: 6rem;
   --link-color: #2d5ea1;
   --box-shadow: #cacaca;
@@ -75,6 +76,7 @@
   /*other basic stuff*/
   --accent-color: rgba(34, 34, 34, 0.863);
   --text-primary-color: #ffffff;
+  --text-color-hover: #000000;
   --link-color: #4c93f3;
   --box-shadow: rgba(137, 152, 187, 0.4);
 
